--- a/coding.vcxproj
+++ b/coding.vcxproj
@@ -1123,10 +1123,14 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main1.cpp" />
-    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main2.cpp" />
-    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main3.cpp" />
-    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4.cpp" />
+    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main1.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main3.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="OnlineContest\IndeedTokyo-Practice\main.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
