--- a/coding.vcxproj.filters
+++ b/coding.vcxproj.filters
@@ -901,5 +901,11 @@
     <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main3.cpp">
       <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
     </ClCompile>
+    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main2.cpp">
+      <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4.cpp">
+      <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
