--- a/coding.vcxproj.filters
+++ b/coding.vcxproj.filters
@@ -41,6 +41,9 @@
     <Filter Include="OnlineTest\GoogleAPECTest-PracticeRound">
       <UniqueIdentifier>{d8005795-04d1-4d93-9475-0ac33c4171c6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="OnlineTest\NetEase2016-VideoCoding">
+      <UniqueIdentifier>{327aa757-fc69-4e15-a20c-e7d7c1bc2cf9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LeetCode\1.c">
@@ -900,6 +903,15 @@
     </ClCompile>
     <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main3.cpp">
       <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main2.cpp">
+      <Filter>OnlineTest\NetEase2016-VideoCoding</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main1.cpp">
+      <Filter>OnlineTest\NetEase2016-VideoCoding</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main3.cpp">
+      <Filter>OnlineTest\NetEase2016-VideoCoding</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
