--- a/coding.vcxproj.filters
+++ b/coding.vcxproj.filters
@@ -910,7 +910,7 @@
     <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4.cpp">
       <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
     </ClCompile>
-	<ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4ref.cpp">
+    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4ref.cpp">
       <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
     </ClCompile>
     <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main1.cpp">
@@ -921,6 +921,9 @@
     </ClCompile>
     <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main3.cpp">
       <Filter>OnlineTest\NetEase2016-VideoCoding</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\GoogleAPECTest-PracticeRound\main4largedata.cpp">
+      <Filter>OnlineTest\GoogleAPECTest-PracticeRound</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
