--- a/coding.vcxproj.filters
+++ b/coding.vcxproj.filters
@@ -44,6 +44,9 @@
     <Filter Include="OnlineTest\NetEase2016-VideoCoding">
       <UniqueIdentifier>{c8a6446a-52fa-49a3-8407-38a10b70fde5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="OnlineTest\Microsoft2016-October">
+      <UniqueIdentifier>{9c026c16-da5b-4a21-8b6d-365daefa7469}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LeetCode\1.c">
@@ -910,7 +913,7 @@
     <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4.cpp">
       <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
     </ClCompile>
-	<ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4ref.cpp">
+    <ClCompile Include="OnlineContest\GoogleAPECTest-RoundA\main4ref.cpp">
       <Filter>OnlineTest\GoogleAPECTest-RoundA</Filter>
     </ClCompile>
     <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main1.cpp">
@@ -921,6 +924,15 @@
     </ClCompile>
     <ClCompile Include="OnlineContest\NetEase2016-VideoCoding\main3.cpp">
       <Filter>OnlineTest\NetEase2016-VideoCoding</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\Microsoft2016-October\main3.cpp">
+      <Filter>OnlineTest\Microsoft2016-October</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\Microsoft2016-October\main2.cpp">
+      <Filter>OnlineTest\Microsoft2016-October</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineContest\Microsoft2016-October\main1.cpp">
+      <Filter>OnlineTest\Microsoft2016-October</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
